--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,7 +185,8 @@
 
     <!-- CrashReportActivity -->
     <string name="app_destroyed">This app may be destroyed, please download the latest version of this app from the official source.</string>
-    <string name="outdated_manager">Version of LSPosed Manager and LSPosed Core are not consistent. Please re-install the corresponding version.</string>
+    <string name="outdated_core">LSPosed app is newer than framework. Please update LSPosed framework.</string>
+    <string name="outdated_manager">LSPosed framework is newer than app. Please update the app from /data/adb/lspd/manager.apk manually.</string>
     <string name="manager_crashed">Manager crashed</string>
     <string name="cpoy_crash_info">Copy crash info</string>
     <string name="copy_toast_msg">Copied</string>
